added containers to display weather information

--- a/index.html
+++ b/index.html
@@ -60,7 +60,64 @@
 
         <!-- Weather Information -->
         <div class="col-10">
-          <p>Display Weather</p>
+            <div class="row">
+                <div class="col todayForecast">
+                    <h3 class="city">City Name</h3>
+                    <h3 class="todayDate">Date</h3>
+                    <p class="todayTemp">Temperature</p>
+                    <p class="todayHumidity">Humidity</p>
+                    <p class="todayWind">Wind Speed</p>
+                    <p class="todayUV">UV Index</p>
+                </div>
+            </div>
+            <div class="row">
+                <h3>5-Day Forecast</h3>
+            </div>
+                <div class="row"></div>
+                <div class="card-deck">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">Date</h5>
+                        <p class="card-text">Icon.</p>
+                        <p class="card-text">Temperature</p>
+                        <p class="card-text">Humidity</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Date</h5>
+                            <p class="card-text">Icon.</p>
+                            <p class="card-text">Temperature</p>
+                            <p class="card-text">Humidity</p>
+                          </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Date</h5>
+                            <p class="card-text">Icon.</p>
+                            <p class="card-text">Temperature</p>
+                            <p class="card-text">Humidity</p>
+                          </div>
+                    </div>
+                    <div class="card">              
+                        <div class="card-body">
+                            <h5 class="card-title">Date</h5>
+                            <p class="card-text">Icon.</p>
+                            <p class="card-text">Temperature</p>
+                            <p class="card-text">Humidity</p>
+                          </div>
+                      </div>
+                      <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Date</h5>
+                            <p class="card-text">Icon.</p>
+                            <p class="card-text">Temperature</p>
+                            <p class="card-text">Humidity</p>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+            </div>
         </div>
       </div>
     </div>
