removed text content from index.html since JS will update the html dynamically

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div class="col-10">
           <div class="row">
             <div class="col todayForecast">
-              <h3 class="city">City Name</h3>
-              <h3 class="todayDate">Date</h3>
-              <p class="todayTemp">Temperature</p>
-              <p class="todayHumidity">Humidity</p>
-              <p class="todayWind">Wind Speed</p>
-              <p class="todayUV">UV Index</p>
+              <h3 id="city"></h3>
+              <h3 id="todayDate"></h3>
+              <p id="todayTemp"></p>
+              <p id="todayHumidity"></p>
+              <p id="todayWind"></p>
+              <p id="todayUV"></p>
             </div>
           </div>
           <div class="row">
