created function to populate 5-day weather forecast upon clicking the submit button, changed weather forecast container display to be none by default and block upon clicking the submit button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <!-- Container -->
-    <div class="container-fluid">
+    <div class="container-fluid" id="reset">
       <div class="row">
         <!-- Sidebar -->
         <div class="col-2">
@@ -44,20 +44,16 @@
 
           <!-- Display search history -->
           <div class="row">
-            <div class="col history">
+            <div class="col" id="history">
               <ul class="list-group">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Hello</li>
               </ul>
             </div>
           </div>
         </div>
 
         <!-- Weather Information -->
-        <div class="col-10">
+        <div class="col-10" id="forecastContainer">
           <div class="row">
             <div class="col todayForecast">
               <h3 id="city"></h3>
@@ -75,42 +71,42 @@
           <div class="card-deck">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">Icon.</p>
-                <p class="card-text">Temperature</p>
-                <p class="card-text">Humidity</p>
+                <h5 class="card-title" id="d1"></h5>
+                <p class="card-text" id="i1"></p>
+                <p class="card-text" id="t1"></p>
+                <p class="card-text" id="h1"></p>
               </div>
             </div>
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">Icon.</p>
-                <p class="card-text">Temperature</p>
-                <p class="card-text">Humidity</p>
+                <h5 class="card-title" id="d2"></h5>
+                <p class="card-text" id="i2"></p>
+                <p class="card-text" id="t2"></p>
+                <p class="card-text" id="h2"></p>
               </div>
             </div>
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">Icon.</p>
-                <p class="card-text">Temperature</p>
-                <p class="card-text">Humidity</p>
+                <h5 class="card-title" id="d3"></h5>
+                <p class="card-text" id="i3"></p>
+                <p class="card-text"id="t3"></p>
+                <p class="card-text" id="h3"></p>
               </div>
             </div>
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">Icon.</p>
-                <p class="card-text">Temperature</p>
-                <p class="card-text">Humidity</p>
+                <h5 class="card-title" id="d4"></h5>
+                <p class="card-text" id="i4"></p>
+                <p class="card-text" id="t4"></p>
+                <p class="card-text" id="h4"></p>
               </div>
             </div>
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">Icon.</p>
-                <p class="card-text">Temperature</p>
-                <p class="card-text">Humidity</p>
+                <h5 class="card-title" id="d5"></h5>
+                <p class="card-text" id="i5"></p>
+                <p class="card-text" id="t5"></p>
+                <p class="card-text" id="h5"></p>
               </div>
             </div>
           </div>
