--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
           <!-- Display search history -->
           <div class="row">
             <div class="col" id="history">
-              <ul class="list-group">
-              </ul>
+              <ul class="list-group"></ul>
             </div>
           </div>
         </div>
@@ -63,49 +62,55 @@
               <p id="todayUV"></p>
             </div>
           </div>
-          <div class="row">
-            <h3>5-Day Forecast</h3>
-          </div>
-          <div class="row"></div>
-          <div class="card-deck">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title" id="d1"></h5>
-                <p class="card-text" id="i1"></p>
-                <p class="card-text" id="t1"></p>
-                <p class="card-text" id="h1"></p>
-              </div>
+
+          <!-- <div class="row"> -->
+            <!-- <div class="col-12">
+              <h3>5-day Forecast:</h3>
+            </div> -->
+            <div class="col">
+              <h3>5-day Forecast:</h3>
             </div>
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title" id="d2"></h5>
-                <p class="card-text" id="i2"></p>
-                <p class="card-text" id="t2"></p>
-                <p class="card-text" id="h2"></p>
+
+            <div class="col card-deck">
+              <div class="card">
+                <div class="card-body bg-primary">
+                  <h5 class="card-title" id="d1"></h5>
+                  <p class="card-text" id="i1"></p>
+                  <p class="card-text" id="t1"></p>
+                  <p class="card-text" id="h1"></p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title" id="d3"></h5>
-                <p class="card-text" id="i3"></p>
-                <p class="card-text"id="t3"></p>
-                <p class="card-text" id="h3"></p>
+              <div class="card">
+                <div class="card-body bg-primary">
+                  <h5 class="card-title" id="d2"></h5>
+                  <p class="card-text" id="i2"></p>
+                  <p class="card-text" id="t2"></p>
+                  <p class="card-text" id="h2"></p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title" id="d4"></h5>
-                <p class="card-text" id="i4"></p>
-                <p class="card-text" id="t4"></p>
-                <p class="card-text" id="h4"></p>
+              <div class="card">
+                <div class="card-body bg-primary">
+                  <h5 class="card-title" id="d3"></h5>
+                  <p class="card-text" id="i3"></p>
+                  <p class="card-text" id="t3"></p>
+                  <p class="card-text" id="h3"></p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title" id="d5"></h5>
-                <p class="card-text" id="i5"></p>
-                <p class="card-text" id="t5"></p>
-                <p class="card-text" id="h5"></p>
+              <div class="card">
+                <div class="card-body bg-primary">
+                  <h5 class="card-title" id="d4"></h5>
+                  <p class="card-text" id="i4"></p>
+                  <p class="card-text" id="t4"></p>
+                  <p class="card-text" id="h4"></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body bg-primary">
+                  <h5 class="card-title" id="d5"></h5>
+                  <p class="card-text" id="i5"></p>
+                  <p class="card-text" id="t5"></p>
+                  <p class="card-text" id="h5"></p>
+                </div>
               </div>
             </div>
           </div>
